crates/service/tests/rename/snapshots/features__rename__rename__func_in_implicit_module.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 1,
            "character": 6
          },
          "end": {
            "line": 1,
            "character": 11
          }
        },
        "newText": "$f"
      },
      {
        "range": {
          "start": {
            "line": 2,
            "character": 12
          },
          "end": {
            "line": 2,
            "character": 17
          }
        },
        "newText": "$f"
      }
    ]
  }
}
