crates/service/tests/rename/snapshots/features__rename__rename__global_ref.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 12
          },
          "end": {
            "line": 2,
            "character": 19
          }
        },
        "newText": "$g"
      },
      {
        "range": {
          "start": {
            "line": 3,
            "character": 22
          },
          "end": {
            "line": 3,
            "character": 29
          }
        },
        "newText": "$g"
      }
    ]
  }
}
