crates/service/tests/rename/snapshots/features__rename__rename__import_ref.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 28
          },
          "end": {
            "line": 2,
            "character": 30
          }
        },
        "newText": "$a"
      },
      {
        "range": {
          "start": {
            "line": 4,
            "character": 16
          },
          "end": {
            "line": 4,
            "character": 18
          }
        },
        "newText": "$a"
      }
    ]
  }
}
