crates/service/tests/rename/snapshots/features__rename__rename__local.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 17
          },
          "end": {
            "line": 2,
            "character": 23
          }
        },
        "newText": "$l"
      },
      {
        "range": {
          "start": {
            "line": 3,
            "character": 19
          },
          "end": {
            "line": 3,
            "character": 25
          }
        },
        "newText": "$l"
      }
    ]
  }
}
