crates/service/tests/rename/snapshots/features__rename__rename__memory_def.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 12
          },
          "end": {
            "line": 2,
            "character": 19
          }
        },
        "newText": "$m"
      },
      {
        "range": {
          "start": {
            "line": 3,
            "character": 23
          },
          "end": {
            "line": 3,
            "character": 30
          }
        },
        "newText": "$m"
      }
    ]
  }
}
