crates/service/tests/rename/snapshots/features__rename__rename__module.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 1,
            "character": 8
          },
          "end": {
            "line": 1,
            "character": 11
          }
        },
        "newText": "$m"
      }
    ]
  }
}
