crates/service/tests/rename/snapshots/features__rename__rename__quote_only_with_non_ident_chars.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 8
          },
          "end": {
            "line": 2,
            "character": 13
          }
        },
        "newText": "$\"(a)\""
      },
      {
        "range": {
          "start": {
            "line": 2,
            "character": 20
          },
          "end": {
            "line": 2,
            "character": 25
          }
        },
        "newText": "$\"(a)\""
      }
    ]
  }
}
