crates/service/tests/rename/snapshots/features__rename__rename__start_with_numeric.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 8
          },
          "end": {
            "line": 2,
            "character": 13
          }
        },
        "newText": "$0"
      },
      {
        "range": {
          "start": {
            "line": 2,
            "character": 20
          },
          "end": {
            "line": 2,
            "character": 25
          }
        },
        "newText": "$0"
      }
    ]
  }
}
